--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
 </head>
 <body>
 
+<form>
+    <div class="form-group">
+        <label for="movie-title">Title</label>
+        <input type="text" class="form-control movie-title" id="movie-title" placeholder="Enter movie Title">
+    </div>
 
+    <div class="form-group">
+        <label for="movie-title">Genre</label>
+        <input type="text" class="form-control movie-genre" id="movie-genre" placeholder="Enter genre">
+    </div>
+    <div class="form-group">
+        <label for="rating">Rating</label>
+        <select class="form-control movie-rating" id="rating">
+            <option>--Choose Movie Rating--</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="movie-title">Director</label>
+        <input type="text" class="form-control movie-genre" id="Director" placeholder="Enter director Name">
+    </div>
+    <div class="form-group">
+        <label for="description" >Description</label>
+        <textarea class="form-control" id="description" rows="3"></textarea>
+    </div>
+</form>
 
 
 
