created key pair values for addMovie function

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="movie-title">Director</label>
-        <input type="text" class="form-control movie-genre" id="Director" placeholder="Enter director Name">
+        <label for="movie-director">Director</label>
+        <input type="text" class="form-control movie-genre" id="movie-director" placeholder="Enter director Name">
     </div>
     <div class="form-group">
         <label for="description" >Description</label>
