--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 <!--<form>-->
    <div id="main-container"></div>
     <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" class="form-control title" id="title" placeholder="Enter movie Title">
+        <label for="movie-title">Title</label>
+        <input type="text" class="form-control title" id="movie-title" placeholder="Enter movie Title">
     </div>
 
     <div class="form-group">
-        <label for="actors">Actors</label>
-        <input type="text" class="form-control actors" id="actors" placeholder="Enter Actor Names">
+        <label for="movie-actors">Actors</label>
+        <input type="text" class="form-control actors" id="movie-actors" placeholder="Enter Actor Names">
     </div>
 
     <div class="form-group">
-        <label for="genres">Genre</label>
-        <input type="text" class="form-control genres" id="genres" placeholder="Enter genre">
+        <label for="movie-genre">Genre</label>
+        <input type="text" class="form-control genres" id="movie-genre" placeholder="Enter genre">
     </div>
     <div class="form-group">
-        <label for="rating">Rating</label>
-        <select class="form-control rating" id="rating">
+        <label for="movie-rating">Rating</label>
+        <select class="form-control rating" id="movie-rating">
             <option>--Choose Movie Rating--</option>
             <option>1</option>
             <option>2</option>
@@ -46,12 +46,16 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="director">Director</label>
-        <input type="text" class="form-control director" id="director" placeholder="Enter director Name">
+        <label for="movie-director">Director</label>
+        <input type="text" class="form-control director" id="movie-director" placeholder="Enter director Name">
     </div>
     <div class="form-group">
-        <label for="plot" >Description</label>
-        <textarea class="form-control" id="plot" rows="3"></textarea>
+        <label for="movie-plot" >Description</label>
+        <textarea class="form-control" id="movie-plot" rows="3"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="movie-year">Actors</label>
+        <input type="text" class="form-control actors" id="movie-year" placeholder="Enter Year Released">
     </div>
 </form>
 
