--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <body>
 <h1 id="load"></h1>
 <!--<form>-->
-   <div id="main-container"></div>
+   <div id="cards-container"></div>
     <div class="form-group">
         <label for="movie-title">Title</label>
         <input type="text" class="form-control movie-title" id="movie-title" placeholder="Enter movie Title">
     </div>
 
     <div class="form-group">
-        <label for="movie-title">Genre</label>
+        <label for="movie-genre">Genre</label>
         <input type="text" class="form-control movie-genre" id="movie-genre" placeholder="Enter genre">
     </div>
     <div class="form-group">
-        <label for="rating">Rating</label>
-        <select class="form-control movie-rating" id="rating">
+        <label for="movie-rating">Rating</label>
+        <select class="form-control movie-rating" id="movie-rating">
             <option>--Choose Movie Rating--</option>
             <option>1</option>
             <option>2</option>
@@ -35,12 +35,16 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="movie-title">Director</label>
-        <input type="text" class="form-control movie-genre" id="Director" placeholder="Enter director Name">
+        <label for="movie-director">Director</label>
+        <input type="text" class="form-control movie-genre" id="movie-director" placeholder="Enter director Name">
     </div>
+<div class="form-group">
+    <label for="movie-year">Year</label>
+    <input type="text" class="form-control movie-year" id="movie-year" placeholder="Enter Year">
+</div>
     <div class="form-group">
-        <label for="description" >Description</label>
-        <textarea class="form-control" id="description" rows="3"></textarea>
+        <label for="movie-plot">Description</label>
+        <textarea class="form-control" id="movie-plot" rows="3"></textarea>
     </div>
 </form>
 
