--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
 <div class="container">
     <div class="row">
         <!--START CARDS-->
-        <div class="col-sm-12 col-md-8" id="rendered-card">
+        <div class="col-12 col-md-8" id="rendered-card">
 
         </div>
         <!--END CARDS-->
         <!--START FORM-->
-        <div class="col-sm-12 col-md-4">
+        <div class="col-12 col-md-4">
             <form>
-                <div id="cards-container"></div>
+                <!--TITLE-->
                 <div class="form-group">
                     <label for="movie-title">Title</label>
                     <input type="text" class="form-control movie-title" id="movie-title" placeholder="Enter movie Title">
                 </div>
+                <!--YEAR-->
                 <div class="form-group">
-                    <label for="movie-genre">Genre</label>
-                    <input type="text" class="form-control movie-genre" id="movie-genre" placeholder="Enter genre">
+                    <label for="movie-year">Year</label>
+                    <input type="text" class="form-control movie-year" id="movie-year" placeholder="Enter Year">
                 </div>
+                <!--RATING-->
                 <div class="form-group">
                     <label for="movie-rating">Rating</label>
                     <select class="form-control movie-rating" id="movie-rating">
@@ -43,19 +45,27 @@
                         <option>5</option>
                     </select>
                 </div>
+                <!--PLOT-->
                 <div class="form-group">
-                    <label for="movie-director">Director</label>
-                    <input type="text" class="form-control movie-genre" id="movie-director" placeholder="Enter director Name">
-                </div>
-                <div class="form-group">
-                    <label for="movie-year">Year</label>
-                    <input type="text" class="form-control movie-year" id="movie-year" placeholder="Enter Year">
-                </div>
-                <div class="form-group">
-                    <label for="movie-plot">Description</label>
+                    <label for="movie-plot">Plot</label>
                     <textarea class="form-control" id="movie-plot" rows="3"></textarea>
                 </div>
-                <button id="addMovieBtn">Add Movie</button>
+                <!--GENRE-->
+                <div class="form-group">
+                    <label for="movie-genre">Genre</label>
+                    <input type="text" class="form-control movie-genre" id="movie-genre" placeholder="Enter genre">
+                </div>
+                <!--DIRECTOR-->
+                <div class="form-group">
+                    <label for="movie-director">Director</label>
+                    <input type="text" class="form-control director" id="movie-director" placeholder="Enter director Name">
+                </div>
+                <!--CAST-->
+                <div class="form-group">
+                    <label for="movie-actors">Actors</label>
+                    <input type="text" class="form-control movie-actors" id="movie-actors" placeholder="Enter Cast Names">
+                </div>
+                <button id="add-movie-btn">Add Movie</button>
             </form>
         </div>
         <!--END FORM-->
