--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 <body>
 <h1 id="load"></h1>
 <div class="container">
+
     <div class="row">
+
         <!--START CARDS-->
-        <div class="col-12 col-md-8" id="rendered-card">
+        <div id="cards-container" class="col-8 col-md-8">
 
         </div>
+
         <!--END CARDS-->
         <!--START FORM-->
-        <div class="col-12 col-md-4">
-            <form>
+        <form>
+        <div class="col-12 col-md-12">
+
                 <!--TITLE-->
                 <div class="form-group">
                     <label for="movie-title">Title</label>
@@ -66,7 +70,10 @@
                     <input type="text" class="form-control movie-actors" id="movie-actors" placeholder="Enter Cast Names">
                 </div>
                 <button id="add-movie-btn">Add Movie</button>
+        </div>
+
             </form>
+
         </div>
         <!--END FORM-->
 
