show/hide update working as per reqt

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <input type="text" class="form-control movie-actors" id="movie-actors" placeholder="Enter Cast Names">
                 </div>
                 <button id="add-movie-btn">Add Movie</button>
+                <button id="update-movie-btn" >Update Movie </button>
         </div>
 
             </form>
