--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 </div>
                 <button id="add-movie-btn">Add Movie</button>
                 <button id="update-movie-btn" >Update Movie </button>
+            <input type="hidden" id="update-id">
         </div>
 
             </form>
