--- a/index.html
+++ b/index.html
@@ -8,88 +8,92 @@
     <title>Movies App</title>
     <link href="css/movies.css" rel="stylesheet">
     <!--BOOTSTRAP CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
-<body>
-<h1 id="load"></h1>
-<div class="container">
+    <body>
+    <h1 id="load"></h1>
+        <div class="row">
+            <!--START CARDS-->
+            <div id="cards-container" class="col-12 col-md-8">
 
-    <div class="row">
-
-        <!--START CARDS-->
-        <div id="cards-container" class="col-8 col-md-8">
-
-        </div>
-
-        <!--END CARDS-->
-        <!--START FORM-->
-        <form>
-        <div class="col-12 col-md-12">
-
-                <!--TITLE-->
-                <div class="form-group">
-                    <label for="movie-title">Title</label>
-                    <input type="text" class="form-control movie-title" id="movie-title" placeholder="Enter movie Title">
-                </div>
-                <!--YEAR-->
-                <div class="form-group">
-                    <label for="movie-year">Year</label>
-                    <input type="text" class="form-control movie-year" id="movie-year" placeholder="Enter Year">
-                </div>
-                <!--RATING-->
-                <div class="form-group">
-                    <label for="movie-rating">Rating</label>
-                    <select class="form-control movie-rating" id="movie-rating">
-                        <option>--Choose Movie Rating--</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                    </select>
-                </div>
-                <!--PLOT-->
-                <div class="form-group">
-                    <label for="movie-plot">Plot</label>
-                    <textarea class="form-control" id="movie-plot" rows="3"></textarea>
-                </div>
-                <!--GENRE-->
-                <div class="form-group">
-                    <label for="movie-genre">Genre</label>
-                    <input type="text" class="form-control movie-genre" id="movie-genre" placeholder="Enter genre">
-                </div>
-                <!--DIRECTOR-->
-                <div class="form-group">
-                    <label for="movie-director">Director</label>
-                    <input type="text" class="form-control director" id="movie-director" placeholder="Enter director Name">
-                </div>
-                <!--CAST-->
-                <div class="form-group">
-                    <label for="movie-actors">Actors</label>
-                    <input type="text" class="form-control movie-actors" id="movie-actors" placeholder="Enter Cast Names">
-                </div>
-                <button id="add-movie-btn">Add Movie</button>
-                <button id="update-movie-btn" >Update Movie </button>
-            <input type="hidden" id="update-id">
-        </div>
-
-            </form>
-
+            </div>
+            <!--END CARDS-->
+            <!--START FORM-->
+            <div class="col-12 col-md-4">
+                <form class="form">
+                    <!--TITLE-->
+                    <div class="form-group">
+                        <label for="movie-title">Title</label>
+                        <input type="text" class="form-control movie-title" id="movie-title"
+                               placeholder="Enter movie Title">
+                    </div>
+                    <!--YEAR-->
+                    <div class="form-group">
+                        <label for="movie-year">Year</label>
+                        <input type="text" class="form-control movie-year" id="movie-year" placeholder="Enter Year">
+                    </div>
+                    <!--RATING-->
+                    <div class="form-group">
+                        <label for="movie-rating">Rating</label>
+                        <select class="form-control movie-rating" id="movie-rating">
+                            <option>--Choose Movie Rating--</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <!--PLOT-->
+                    <div class="form-group">
+                        <label for="movie-plot">Plot</label>
+                        <textarea class="form-control" id="movie-plot" rows="3"></textarea>
+                    </div>
+                    <!--GENRE-->
+                    <div class="form-group">
+                        <label for="movie-genre">Genre</label>
+                        <input type="text" class="form-control movie-genre" id="movie-genre" placeholder="Enter genre">
+                    </div>
+                    <!--DIRECTOR-->
+                    <div class="form-group">
+                        <label for="movie-director">Director</label>
+                        <input type="text" class="form-control director" id="movie-director"
+                               placeholder="Enter director Name">
+                    </div>
+                    <!--CAST-->
+                    <div class="form-group">
+                        <label for="movie-actors">Actors</label>
+                        <input type="text" class="form-control movie-actors" id="movie-actors"
+                               placeholder="Enter Cast Names">
+                    </div>
+                    <button id="add-movie-btn">Add Movie</button>
+                    <button id="update-movie-btn">Update Movie</button>
+                    <input type="hidden" id="update-id">
+                </form>
+            </div>
         </div>
         <!--END FORM-->
 
-    </div>
-</div>
+<!--    </div>-->
 
-<!--JQUERY CDN-->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <!--JQUERY CDN-->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
-<script src="js/movies.js"></script>
-<!--BOOTSTRAP CDN-->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="js/movies.js"></script>
+    <!--BOOTSTRAP CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+            crossorigin="anonymous"></script>
 
 
-</body>
+    </body>
 </html>
